--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SdaCourseApplication</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
+    <string name="clear">TO bedzie czyszczenie</string>
 </resources>
