--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="open">open</string>
     <string name="close">close</string>
     <string name="clear">TO bedzie czyszczenie</string>
+    <string name = "Checked_items">Checked %d items</string>
+
+    <plurals name="checked_items_plural">
+        <item quantity="one">%d item</item>
+        <item quantity="other">%d items</item>
+    </plurals>
+
+
+    <string name="question1">Ile pies ma oczy???</string>
 </resources>
